--- a/programs/escrow-project/Cargo.toml
+++ b/programs/escrow-project/Cargo.toml
@@ -18,4 +18,10 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "0.30.1"
+solana-program = "1.16.0"
+# bls12_381 = "0.8"
+hex = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+sha2 = "0.10"
+bls12_381_plus = "0.4.1"
 # rand = "0.8"
