--- a/programs/escrow-project/Cargo.toml
+++ b/programs/escrow-project/Cargo.toml
@@ -26,4 +26,4 @@ sha2 = "0.9.7"  # Ensure this is compatible with `bls12_381`
 #bls12_381_plus = "0.4.1"
 # rand = "0.8"
 bls12_381 = { version = "0.8.0", features = ["experimental"] }
-
+num-bigint = "0.4.6"
